discussion/kv_engine/180584/180584_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46740: Introduce CM::getNextCheckpointItemsForCursor

Change-Id: Idb88ab6d4682027311418a9fcde691ab949a5ed1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-09-29 06:48:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-29 06:58:17.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20752/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1: error: expected expression [clang-diagnostic-error]
}
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20752/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected expression [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20752/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49794/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_manager.cc(952): error C2059: syntax error: "}" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49794/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41849/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41849/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10563/ : FAILURE

Compile error at [2022-09-29T06:51:31.317Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected primary-expression before ?}? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10563/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10461/ : FAILURE

Compile error at [2022-09-29T06:49:55.535Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10461/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23124/ : FAILURE

Compile error at [2022-09-29T06:52:39.755Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected primary-expression before ?}? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23124/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22734/ : FAILURE

Compile error at [2022-09-29T06:57:48.230Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected primary-expression before ?}? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22734/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22134/ : FAILURE

Compile error at [2022-09-29T06:53:23.354Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22134/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23955/ : FAILURE

Compile error at [2022-09-29T06:52:17.027Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23955/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31142/ : FAILURE

Compile error at [2022-09-29T06:53:25.481Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint_manager.cc:952:1:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31142/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19980/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
